fix(footer): eliminar frase redundante en ES, mantener enlace a CC BY-SA 4.0 y badge

--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -60,5 +60,5 @@
   "license_url": "https://creativecommons.org/licenses/by-sa/4.0/deed.es",
   "help_retry_button": "Volver a intentar",
   "footer_line1_html": "© <a href=\"https://bilateria.es\" target=\"_blank\" rel=\"noopener\">Juan José de Haro</a>",
-  "footer_line2_html": "Licencia del código: <a href=\"LICENSE.txt\">AGPL v3</a> · Contenido: <a href=\"https://creativecommons.org/licenses/by-sa/4.0/\" target=\"_blank\" rel=\"noopener\">CC BY-SA 4.0</a> · <a href=\"https://creativecommons.org/licenses/by-sa/4.0/\" target=\"_blank\" rel=\"noopener\">Esta obra está bajo licencia CC BY-SA 4.0</a> <img alt=\"CC BY-SA 4.0\" style=\"vertical-align:middle;height:18px\" src=\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAFgAAAAfCAMAAABUFvrSAAAAAXNSR0IB2cksfwAAAARnQU1BAACxjnz7\">"
+  "footer_line2_html": "Licencia del código: <a href=\"LICENSE.txt\">AGPL v3</a> · Contenido: <a href=\"https://creativecommons.org/licenses/by-sa/4.0/\" target=\"_blank\" rel=\"noopener\">CC BY-SA 4.0</a> <img alt=\"CC BY-SA 4.0\" style=\"vertical-align:middle;height:18px\" src=\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAFgAAAAfCAMAAABUFvrSAAAAAXNSR0IB2cksfwAAAARnQU1BAACxjnz7\">"
 }
